crates/ai/tests/snapshots/tool_outputs_parity__output_get_holdings.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "accountScope": "all",
    "currency": "USD",
    "hasMore": false,
    "holdings": [],
    "page": 1,
    "pageSize": 100,
    "totalPages": 0,
    "totalRowCount": 0,
    "totalValue": -0.0,
    "viewMode": "treemap"
  }
}
