crates/ai/tests/snapshots/tool_outputs_parity__output_get_holdings_all_fit.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "accountScope": "all",
    "currency": "USD",
    "hasMore": false,
    "holdings": [
      {
        "account": "Brokerage",
        "costBasisBase": null,
        "currency": "USD",
        "dayChangePct": null,
        "holdingType": "Security",
        "incomeBase": null,
        "marketValueBase": 300.0,
        "name": null,
        "quantity": 1.0,
        "returnBasisBase": null,
        "symbol": "AAA",
        "totalGainBase": null,
        "totalGainPct": null,
        "totalReturnBase": null,
        "totalReturnPct": null,
        "unrealizedGainPct": null,
        "weight": 0.0
      },
      {
        "account": "Brokerage",
        "costBasisBase": null,
        "currency": "USD",
        "dayChangePct": null,
        "holdingType": "Security",
        "incomeBase": null,
        "marketValueBase": 200.0,
        "name": null,
        "quantity": 1.0,
        "returnBasisBase": null,
        "symbol": "BBB",
        "totalGainBase": null,
        "totalGainPct": null,
        "totalReturnBase": null,
        "totalReturnPct": null,
        "unrealizedGainPct": null,
        "weight": 0.0
      },
      {
        "account": "Brokerage",
        "costBasisBase": null,
        "currency": "USD",
        "dayChangePct": null,
        "holdingType": "Security",
        "incomeBase": null,
        "marketValueBase": 100.0,
        "name": null,
        "quantity": 1.0,
        "returnBasisBase": null,
        "symbol": "CCC",
        "totalGainBase": null,
        "totalGainPct": null,
        "totalReturnBase": null,
        "totalReturnPct": null,
        "unrealizedGainPct": null,
        "weight": 0.0
      }
    ],
    "page": 1,
    "pageSize": 100,
    "totalPages": 1,
    "totalRowCount": 3,
    "totalValue": 600.0,
    "viewMode": "table"
  }
}
