crates/ai/tests/snapshots/tool_outputs_parity__output_get_holdings_page_2.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "accountScope": "all",
    "currency": "USD",
    "hasMore": false,
    "holdings": [
      {
        "account": "Brokerage",
        "costBasisBase": null,
        "currency": "USD",
        "dayChangePct": null,
        "holdingType": "Security",
        "incomeBase": null,
        "marketValueBase": 100.0,
        "name": null,
        "quantity": 1.0,
        "returnBasisBase": null,
        "symbol": "CCC",
        "totalGainBase": null,
        "totalGainPct": null,
        "totalReturnBase": null,
        "totalReturnPct": null,
        "unrealizedGainPct": null,
        "weight": 0.0
      }
    ],
    "originalCount": 3,
    "page": 2,
    "pageSize": 2,
    "totalPages": 2,
    "totalRowCount": 3,
    "totalValue": 600.0,
    "truncated": true,
    "viewMode": "table"
  }
}
