crates/ai/tests/snapshots/tool_outputs_parity__output_record_activity_existing_manual_bond.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "availableAccounts": [
      {
        "accountType": "SECURITIES",
        "currency": "USD",
        "id": "acc-1",
        "name": "Main Broker"
      }
    ],
    "availableSubtypes": [],
    "draft": {
      "accountId": "acc-1",
      "accountName": "Main Broker",
      "activityDate": "2026-01-17",
      "activityType": "BUY",
      "amount": null,
      "assetId": "bond-a",
      "assetKind": "BOND",
      "assetName": "Corp Bond 2030",
      "currency": "EUR",
      "fee": null,
      "isCustomAsset": false,
      "notes": null,
      "priceSource": "user",
      "pricingMode": "MANUAL",
      "quantity": 10.0,
      "subtype": null,
      "symbol": "XS123",
      "tax": null,
      "unitPrice": 99.5
    },
    "resolvedAsset": {
      "assetId": "bond-a",
      "currency": "EUR",
      "exchange": null,
      "exchangeMic": null,
      "instrumentType": "BOND",
      "name": "Corp Bond 2030",
      "symbol": "XS123"
    },
    "validation": {
      "errors": [],
      "isValid": true,
      "missingFields": []
    }
  }
}
