crates/ai/tests/snapshots/tool_outputs_parity__output_search_activities_symbol_and_asset_id_conflict.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "err": "Provide either symbol or assetId, not both"
}
